--- a/index.html
+++ b/index.html
@@ -5,38 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modulo em Navegadores</title>
+    <title>Calculadora</title>
     <script src="./main.js"></script>
     <script src="./matematica.js"></script>
+    <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
-    <form>
-        <label for="tipoOperacao">Tipo de Operação </label>>
+    <div class="main-content">
+        <form>
+            <label for="tipoOperacao">Tipo de Operação </label>>
 
-        <select name="tipoOperacao" id="tipoOperacao">
-            <option value="dividir">Dividir</option>
-            <option value="subtrair">Subtrair</option>
-            <option value="multiplicar">Multiplicar</option>
-            <option value="somar">Somar</option>
-        </select>
+            <select name="tipoOperacao" id="tipoOperacao">
+                <option value="dividir">Dividir</option>
+                <option value="subtrair">Subtrair</option>
+                <option value="multiplicar">Multiplicar</option>
+                <option value="somar">Somar</option>
+            </select>
 
-        <br />
-        <br />
-        <label for="valor1">Valor 1</label>
-        <input type="number" id="valor1">
-        <br />
+            <br />
+            <br />
+            <label for="valor1">Valor 1</label>
+            <input type="number" id="valor1">
+            <br />
 
-        <label for="valor2">Valor 2</label>
-        <input type="number" id="valor2">
-        <br />
-        <br />
-        <input type="button" value="Calcular" id="btnCalcular">
+            <label for="valor2">Valor 2</label>
+            <input type="number" id="valor2">
+            <br />
+            <br />
+            <input type="button" value="Calcular" id="btnCalcular">
 
-        <input type="reset" value="Limpar" id="btnLimpar">
+            <input type="reset" value="Limpar" id="btnLimpar">
 
-        <output id="resultado"> Resultado >:</output>
-    </form>
+            <output id="resultado"> Resultado >:</output>
+        </form>
+    </div>
 </body>
 
 </html>
