--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <input type="reset" value="Limpar" id="btnLimpar">
 
-            <output id="resultado"> Resultado >:</output>
+            <output id="resultado"> Resultado </output>
         </form>
     </div>
 </body>
